--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-connector-mongodb": "^3.9.2",
     "loopback-connector-mysql": "^5.3.1",
     "loopback-connector-postgresql": "^3.5.0",
     "paralleldots": "^3.2.2",
